--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="row">
-    <div class="col-md-6 mb-4" *ngFor="let employee of employees">
+    <div class="col-md-12 mb-4" *ngFor="let employee of employees">
       <div class="card">
         <div class="card-body d-flex align-items-center">
           <!-- Circular Image -->
@@ -35,5 +35,10 @@
         </div>
       </div>
     </div>
+  </div>
+
+  <div class="d-flex justify-content-center mt-3">
+    <button class="btn btn-secondary me-2" (click)="previousPage()" [disabled]="currentPage === 0">Previous</button>
+    <button class="btn btn-secondary" (click)="nextPage()" [disabled]="currentPage >= totalPages - 1">Next</button>
   </div>
 </div>
